--- a/lbforum/templates_v2ex/lbforum/plugins/inc_header_left_links.html
+++ b/lbforum/templates_v2ex/lbforum/plugins/inc_header_left_links.html
@@ -1,6 +1,7 @@
+{%load i18n%}
 <li>
-	<a href="{% url lbforum_index %}">Home</a>
+	<a href="/">{%trans "Home"%}</a>
 </li>
 <li>
-	<a href="#">Blog</a>
+	<a href="{% url lbforum_index %}"> {%trans "Forum Home"%}</a>
 </li>
