--- a/lbforum/templates_v2ex/lbforum/topic.html
+++ b/lbforum/templates_v2ex/lbforum/topic.html
@@ -57,7 +57,7 @@
             </small>
         </div>
         <div class="inner">
-            <div class="content topic_content">
+            <div class="da topic_content">
                 {% include 'lbforum/inc_post_content.html' %}
             </div>
         </div>
